--- a/PromoStudio.Resources/Strings.resx
+++ b/PromoStudio.Resources/Strings.resx
@@ -345,23 +345,13 @@
   <data name="BuildStep__Voice" xml:space="preserve">
     <value>Voice</value>
   </data>
-  <data name="Vidyard__InlineEmbed" xml:space="preserve">
-    <value>&lt;script type="text/javascript" id="vidyard_embed_code_{0}" src="//play.vidyard.com/{0}.js?v=3.1&amp;type=inline"&gt;&lt;/script&gt;</value>
-    <comment>0: UUID</comment>
+  <data name="Vimeo__InlineEmbed" xml:space="preserve">
+    <value>&lt;iframe src="//player.vimeo.com/video/{0}" height="360" width="640" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen&gt;&lt;/iframe&gt;</value>
+    <comment>0: VideoId</comment>
   </data>
-  <data name="Vidyard__LightboxEmbed" xml:space="preserve">
-    <value>&lt;script type="text/javascript" id="vidyard_embed_code_{0}" src="//play.vidyard.com/{0}.js?v=3.1&amp;type=lightbox"&gt;&lt;/script&gt;&lt;div&gt;&lt;div class="vidyard_wrapper" onclick="fn_vidyard_{1}();"&gt;&lt;img alt="{2}" src="//play.vidyard.com/{0}.jpg" width="360" /&gt;&lt;div class="vidyard_play_button"&gt;&lt;a href="javascript:void(0);"&gt;&lt;/a&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</value>
-    <comment>0: UUID
-1: UUID (replace '-' with '$')
-2: VideoName</comment>
-  </data>
-  <data name="Vidyard__PlayerUrl" xml:space="preserve">
-    <value>http://embed.vidyard.com/share/{0}</value>
-    <comment>0: UUID</comment>
-  </data>
-  <data name="Vidyard__ThumbnailUrl" xml:space="preserve">
-    <value>//embed.vidyard.com/embed/{0}/thumbnail.jpg</value>
-    <comment>0: UUID</comment>
+  <data name="Vimeo__PlayerUrl" xml:space="preserve">
+    <value>https://vimeo.com/{0}</value>
+    <comment>0: VideoId</comment>
   </data>
   <data name="BuildStep__Num_spots_can_be_customized" xml:space="preserve">
     <value>{0} spot{1} can be customized with your own text</value>
